--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-  <h1>this is my first github page!</h1>
+  <h1 style="color:red;">this is my first github page!</h1>
 </body>
 </html>
