--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
 <body>
   <h1 style="color:red;">this is my first github page!</h1>
+  <div class="demoBox" style="width:400px;height:200px;background-color:#eee;">这是一个用于测试的模块！</div>
 </body>
 </html>
