--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>lingCode.github.io</title>
-  <script type="text/javascript" src="javascript/index.js"></script>
+  <script type="text/javascript" src="javascripts/index.js"></script>
 </head>
 
 <body>
