--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1 style="color:red;">this is my first github page!</h1>
   <div class="demoBox" style="width:400px;height:200px;background-color:#eee;">这是一个用于测试的模块！</div>
+  <a href="login.html" target="_blank">点击登录</a>
 </body>
 </html>
