--- a/login.html
+++ b/login.html
@@ -3,10 +3,19 @@
 <head>
 <meta charset="utf-8">
 <title>login</title>
+<style>
+.wrap {width:1000px; height:800px; padding:100px; border:1px solid #ccc; margin:0 auto;}
+</style>
 </head>
 
 <body>
-<input class="login" type="text">
-<input class="loginBtn" type="button" value="登录">
+
+<div class="wrap">
+	<h1>欢迎登录！</h1>
+	<input class="login" type="text">
+	<input class="loginBtn" type="button" value="登录">
+</div>
+
+
 </body>
 </html>
