--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>lingCode.github.io</title>
-  <script type="text/javascript" src="javascripts/index.js"></script>
+	<meta charset="UTF-8">
+	<title>index</title>
+	<style type="text/css">
+	* {margin:0; padding: 0;}
+	li {list-style: none;}
+	body {}
+	.wrapper {width: 1000px; height:auto; margin: 0 auto;}
+	.wrapper .title {text-align: center;padding: 40px 0;}
+	.wrapper ul li {float: left; width: 50%; height: 30px; text-align: center; font: 18px/30px "Microsoft Yahei"; }
+	.wrapper ul li a:hover { height: 30px; font: 18px/30px "Microsoft Yahei"; color: red; }
+	</style>
 </head>
-
 <body>
-  <h1 style="color:red;">this is my first github page!</h1>
-  <div class="demoBox" style="width:400px;height:200px;background-color:#eee;">这是一个用于测试的模块！</div>
-  <a href="login.html" target="_blank">点击登录</a>
+	<div class="wrapper">
+		<h1 class="title">前端开发</h1>
+		<ul>
+			<li><a href="#" target="_blank">html</a></li>
+			<li><a href="#" target="_blank">css</a></li>
+
+			<li><a href="#" target="_blank">html5</a></li>
+			<li><a href="#" target="_blank">css3</a></li>
+
+			<li><a href="#" target="_blank">javascript</a></li>
+			<li><a href="#" target="_blank">jquery</a></li>
+
+			<li><a href="#" target="_blank">PHP</a></li>
+			<li><a href="#" target="_blank">mysql</a></li>
+		</ul>
+	</div>
 </body>
 </html>
