--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>index</title>
+	<title>前端开发</title>
 	<style type="text/css">
 	* {margin:0; padding: 0;}
 	li {list-style: none;}
