--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 			<li><a href="#" target="_blank">javascript</a></li>
 			<li><a href="#" target="_blank">jquery</a></li>
+			
+			<li><a href="#" target="_blank">nodejs</a></li>
+			<li><a href="#" target="_blank">angularJS</a></li>
 
 			<li><a href="#" target="_blank">PHP</a></li>
 			<li><a href="#" target="_blank">mysql</a></li>
