--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
 <head>
 <meta charset="utf-8">
 <title>项目练习</title>
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/jk.css">
 </head>
 
 <body>
+<!--header start-->
+<div id="header" class="width_1000">
+	<div class="wrapper">
+		<h2><a href="#" class="logo">极客学院</a></h2>
+		<div class="search">
+			<form action="">
+				<input class="key_word" type="text" value="搜索课程，问答或Wiki">
+				<input class="btn" type="submit" value="搜索">
+			</form>
+			<div class="hot_word">
+				<a href="#">Android</a>
+				<a href="#">IOS</a>
+				<a href="#">HTML5</a>
+			</div>
+		</div>
+		<div class="login">
+			<span class="massage">&nbsp;</span>
+			<em class="separator">|</em>
+			<a href="#">QQ登录</a>
+			<em class="separator">|</em>
+			<a href="#">登录</a>
+			<em class="separator">|</em>
+			<a href="#">注册</a>
+		</div>
+	</div>
+</div>
+<!--header end-->
 
-<h1>测试项目</h1>
+ <!-- loading start -->
+<div id="loading">
+	<div class="loading-length" style="width: 1903px;"></div>
+</div>
+ <!-- loading end -->
+
+
 
 </body>
 </html>
