--- a/index.html
+++ b/index.html
@@ -42,7 +42,58 @@
 </div>
  <!-- loading end -->
 
+<!-- navigation start -->
+<div id="navigation">
+	<div class="nav_box">
+		<div class="nav width_1000">
+			<div class="nav_word">
+				<a href="#">首页</a>
+				<a href="#">职业课程</a>
+				<a href="#">就业学习</a>
+				<a href="#">极客学院</a>
+				<a href="#">极客+</a>
+				<ul class="popup">
+					<li>
+						<span class="arrow">&nbsp;</span>
+						<a href="#">课程库</a>
+						<a href="#">知识体系图</a>
+						<a href="#">职业路径图</a>
+						<a href="#">系列课程</a>
+					</li>
+					<li>
+						<span class="arrow">&nbsp;</span>
+						<a href="#">课程库</a>
+						<a href="#">知识体系图</a>
+						<a href="#">职业路径图</a>
+						<a href="#">系列课程</a>
+					</li>
+					<li>
+						<span class="arrow">&nbsp;</span>
+						<a href="#">课程库</a>
+						<a href="#">知识体系图</a>
+						<a href="#">职业路径图</a>
+						<a href="#">系列课程</a>
+					</li>
+					<li>
+						<span class="arrow">&nbsp;</span>
+						<a href="#">课程库</a>
+						<a href="#">知识体系图</a>
+						<a href="#">职业路径图</a>
+						<a href="#">系列课程</a>
+					</li>
+				</ul>
+			</div>
+			<div class="user">
+				<a href="#">VIP会员</a>
+				<a href="#">求课程</a>
+				<a href="#">APP下载</a>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- navigation end -->
 
-
+<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript" src="javascripts/jk.js"></script>
 </body>
 </html>
