--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  <!-- loading end -->
 
 <!-- navigation start -->
-<div id="navigation">
+<div id="navigation" class="clearfix">
 	<div class="nav_box">
 		<div class="nav width_1000">
 			<div class="nav_word">
@@ -92,6 +92,349 @@
 	</div>
 </div>
 <!-- navigation end -->
+
+
+<!-- focus start -->
+<div id="focus" class="mar_top width_1000">
+	<div class="focus_left">
+		<ul>
+			<li>
+				<a href="#">移动开发</a>
+				<div class="item_pop">
+					<dl>
+						<dt>应用开发</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>游戏开发</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>常用框架</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">前端开发</a>
+				<div class="item_pop">
+					<dl>
+						<dt>前端基础</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>前端进阶</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>常用框架</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">后端开发</a>
+				<div class="item_pop">
+					<dl>
+						<dt>Python</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>PHP</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>Node.js</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">基础知识</a>
+				<div class="item_pop">
+					<dl>
+						<dt>基础语言</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>计算机基础</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>开发基础</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">云计算&大数据</a>
+				<div class="item_pop">
+					<dl>
+						<dt>云计算</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>大数据</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>虚拟化</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">只能硬件&物联网</a>
+				<div class="item_pop">
+					<dl>
+						<dt>硬件架构</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>物联网操作系统</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>开源硬件平台</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>通信链接技术</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>信息感知处理技术</dt>
+						<dd>
+							<a href="#">Cordova</a>
+							<a href="#">react Native</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">数据库</a>
+				<div class="item_pop">
+					<dl>
+						<dt>SQL</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>NoSQL</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">认证考试</a>
+				<div class="item_pop">
+					<dl>
+						<dt>计算机等级考试</dt>
+						<dd>
+							<a href="#">一级</a>
+							<a href="#">二级C</a>
+							<a href="#">二级java</a>
+							<a href="#">二级C++</a>
+							<a href="#">网络工程师</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>企业认证</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">企业IT</a>
+				<div class="item_pop">
+					<dl>
+						<dt>运维管理</dt>
+						<dd>
+							<a href="#">Shell</a>
+							<a href="#">自动化运维</a>
+							<a href="#">Nginx</a>
+							<a href="#">Apache</a>
+							<a href="#">运维监控</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>商业智能</dt>
+						<dd>
+							<a href="#">FlleMaker</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>操作系统</dt>
+						<dd>
+							<a href="#">Linux</a>
+							<a href="#">windows</a>
+							<a href="#">Mac OS</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>企业服务</dt>
+						<dd>
+							<a href="#">B2C</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+			<li>
+				<a href="#">设计&产品&测试</a>
+				<div class="item_pop">
+					<dl>
+						<dt>设计基础</dt>
+						<dd>
+							<a href="#">Android</a>
+							<a href="#">ios</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>游戏设计</dt>
+						<dd>
+							<a href="#">Cocos</a>
+							<a href="#">Unity3D</a>
+							<a href="#">SpriteKit 2D</a>
+							<a href="#">Unreal</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>产品经理</dt>
+						<dd>
+							<a href="#">需求分析</a>
+							<a href="#">Axure</a>
+							<a href="#">项目实战</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>视觉设计</dt>
+						<dd>
+							<a href="#">应用UI设计</a>
+							<a href="#">网页UI设计</a>
+							<a href="#">设计理论</a>
+							<a href="#">图形设计</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>测试工具</dt>
+						<dd>
+							<a href="#">自动化测试</a>
+						</dd>
+					</dl>
+					<dl>
+						<dt>测试工具</dt>
+						<dd>
+							<a href="#">自动化测试</a>
+						</dd>
+					</dl>
+				</div>
+			</li>
+		</ul>
+	</div>
+	<div class="focus_mid">
+		<div class="slide">
+			<ul class="img_box">
+				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
+			</ul>
+			<ul class="nav_box">
+				<li class="on"></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<span class="btn btn_left"><</span>
+			<span class="btn btn_right">></span>
+		</div>
+	</div>
+	<div class="focus_right"></div>
+</div>
+<!-- focus end -->
 
 <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="javascripts/jk.js"></script>
