--- a/index.html
+++ b/index.html
@@ -416,10 +416,10 @@
 		<div class="slide">
 			<ul class="img_box">
 				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
-				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
-				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
-				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
-				<li><a href="#" target="_blank"><img src="images/569d9a259a9fa.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/56d93b55896ef.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/5695b7bfd0e6d.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/568b87315f438.jpg" alt="pic_1"></a></li>
+				<li><a href="#" target="_blank"><img src="images/56cd10ddc7486.jpg" alt="pic_1"></a></li>
 			</ul>
 			<ul class="nav_box">
 				<li class="on"></li>
@@ -431,8 +431,103 @@
 			<span class="btn btn_left"><</span>
 			<span class="btn btn_right">></span>
 		</div>
+		<div class="slide_bottom">
+			<ul class="img_box">
+				<li>
+					<a href="#">
+						<img class="img" src="images/569ce5c7bedf1.png" alt="">
+						<p class="lession-title">iOS开发工程师</p>
+						<p class="intro">基于最新Swift语言</p>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img class="img" src="images/5661021bd07e6.jpg" alt="">
+						<p class="lession-title">JavaWeb开发工程师</p>
+						<p class="intro">Java人才4个月极速进阶</p>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img class="img" src="images/56615f22aa6eb.jpg" alt="">
+						<p class="lession-title">极客学院就业班</p>
+						<p class="intro">0基础 | 4个月 | 100%保就业</p>
+					</a>
+				</li>
+			</ul>
+			<span class="btn btn_left"></span>
+			<span class="btn btn_right"></span>
+		</div>
 	</div>
-	<div class="focus_right"></div>
+	<div class="focus_right">
+		<div class="items01 news">
+			<h3 class="title">快讯</h3>
+			<ul class="list">
+				<li><a class="red" href="#" target="_blank">这有一张非同一般的成绩单！</a></li>
+				<li><a href="#" target="_blank">阿里技术总监邀你面对面</a></li>
+				<li><a class="red" href="#" target="_blank">精品系列课程限免中！不要错过！</a></li>
+				<li><a href="#" target="_blank">炼就20w年薪web前端工程师</a></li>
+			</ul>
+		</div>
+		<div class="items02 user">
+			<div class="head">
+				<img src="images/default.gif" width="40" alt="head">
+			</div>
+			<div class="hello">Hi! 你好<br>欢迎来到极客学院</div>
+			<div class="entrance">
+				<a href="#" class="loginIn">登录</a>
+				<a href="#" class="signIn">注册</a>
+			</div>
+		</div>
+		<div class="recommend">
+			<ul class="list">
+				<li>
+					<span class="question icon"></span>
+					<span class="word">问答</span>
+					<span class="arrow"></span>
+				</li>
+				<li>
+					<span class="wiki icon"></span>
+					<span class="word">问答</span>
+					<span class="arrow"></span>
+				</li>
+				<li>
+					<span class="lession icon"></span>
+					<span class="word">课程</span>
+					<span class="arrow"></span>
+				</li>
+				<li>
+					<span class="group icon"></span>
+					<span class="word">问答</span>
+					<span class="arrow"></span>
+				</li>
+				<li>
+					<a href="#">
+						<span class="download icon"></span>
+						<span class="word">下载</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="known icon"></span>
+						<span class="word">知识</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="occupation icon"></span>
+						<span class="word">职业</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="vip icon"></span>
+						<span class="word">VIP</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 </div>
 <!-- focus end -->
 
