--- a/swiper/index.html
+++ b/swiper/index.html
@@ -50,6 +50,9 @@
 	        <div class="swiper-slide">
 				<a href="#"><img src="images/p3.jpg"></a>
 	        </div>
+	        <div class="swiper-slide">
+				<a href="#"><img src="images/p4.jpg"></a>
+	        </div>
 	    </div>
 	    <!-- 如果需要分页器 -->
 	    <div class="swiper-pagination">
